--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -22,6 +22,10 @@ jobs:
       run: composer self-update
     - name: Install Dependencies
       run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+    - name: Install Node dependencies
+      run: npm ci
+    - name: Build frontend
+      run: npm run build
     - name: Generate key
       run: php artisan key:generate
     - name: Directory Permissions
